<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edt_bg"
            android:ems="10"
            android:hint="@string/enter_text_here"
            android:minLines="3"
            android:padding="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/translate"
            android:textColor="#ffffff"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pig_latin_translation"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewTranslated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_bg"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:visibility="invisible"
                android:textStyle="normal"
                android:typeface="normal" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>